@@ -99,6 +99,8 @@ upgrade PHP if you have not done so prior to upgrading MediaWiki.
   instead of the site content language
 * (bug 37926) Deleterevision will no longer allow users to delete log entries,
   the new deletelogentry permission is required for this.
+* (bug 38151) Add support for getting and caching user rights in javascript
+* Deprecated mw.user.name in favour of mw.user.getName
 
 === Bug fixes in 1.20 ===
 * (bug 30245) Use the correct way to construct a log page title.
